[gd_scene load_steps=4 format=3 uid="uid://bxo5mfhpjiate"]

[ext_resource type="Script" path="res://Dragon Game Template/Menues/Pause Menu/Front Page/pause_front_page.gd" id="1_5qxg3"]

[sub_resource type="InputEventAction" id="InputEventAction_lchq8"]
action = &"Backspace"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_udhn1"]
events = [SubResource("InputEventAction_lchq8")]

[node name="PauseFrontPage" type="MarginContainer" node_paths=PackedStringArray("focus_button")]
anchors_preset = -1
anchor_right = 0.488281
anchor_bottom = 0.868056
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_5qxg3")
focus_button = NodePath("ScrollContainer/VBoxContainer/ResumeButton")
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="ResumeButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_udhn1")
text = "key_resume"

[node name="SettingsButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "key_settings"

[node name="DebugButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "- DEBUG"

[node name="MainMenuButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "key_exit"

[node name="DesktopButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "key_desktop"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/DebugButton" to="." method="_on_debug_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/DesktopButton" to="." method="_on_desktop_button_pressed"]
